# cargo-workspace

./: .commitlintrc  .eslintrc  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  common.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vite.config.ts
.config/: .eslintignore  .eslintrc  eslint.mjs  format.mjs
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
.scripts/: build_crates.js
apps/: README.md
apps/web/: README.md  next.config.js  package.json
apps/web/pages/: index.tsx
benches/: README.md
client/: README.md
client/playground_android/: settings.gradle
client/playground_android/app/: build.gradle
client/playground_flutter/: pubspec.yaml
client/playground_flutter/ios/Runner/: Info.plist
client/playground_flutter/linux/: CMakeLists.txt  my_application.cc
client/playground_flutter/windows/: CMakeLists.txt
client/playground_ios/playground_ios/: ContentView.swift  Persistence.swift  playground_iosApp.swift
client/playground_ios/playground_ios.xcodeproj/: project.pbxproj
client/playground_ios/playground_iosTests/: playground_iosTests.swift
crates/: README.md
crates/cargo-workspace-cli/: Cargo.toml  README.md  package.json
crates/cargo-workspace-cli/src/: main.rs
crates/wasm-node/: Cargo.toml
crates/wasm-web/: Cargo.toml
examples/: README.md  test_hello_world.js
extensions/: README.md
plugins/: README.md
scripts/: README.md
tests/: base_workspace_test.rs  base_workspace_test.test.js  test_node.test.js
(+35 files in other folders)
